@@ -15,7 +15,6 @@ BUGS:
 - :noremap does not work fully
 - pvh option not working
 - searching backwards incrementally does not work i.e. with 'incsearch' set
-- :q should not close firefox, if there are more than 1 window
 
 FEATURES:
 9 :command for new commands
@@ -25,6 +24,7 @@ FEATURES:
 7 use ctrl-n/p in insert mode for word completion
 7 [ctrl-o/i] to Go back to a Previous Position (done partly, however currenty does not use a per tab jumplist)
 7 whereever possible: get rid of dialogs and ask console-like dialog questions or write error prompts directly on the webpage or with :echo()
+7 :set! should also set about:config options (with autocomplete)
 6 use '' to jump between marks like vim
 6 downloading of links to filesystem (:save <filename>)
 6 autocommands (BrowserStart, BrowserQuit, TabClose, TabOpen, TabChanged, PageLoaded, any more?)
@@ -39,7 +39,6 @@ FEATURES:
 4 Support multiple top-level windows?
 3 Splitting Windows with [:sp :vsp ctrl-w,s ctrl-w,v] and closing with [ctrl-w,q], moving with [ctrl-w,w or tab]
   have a look into the split browser extension
-3 :set! should also set about:config options (with autocomplete)
 - many other ideas are listed in the wiki
 
 RANDOM IDEAS:
